--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello test
+<!DOCTYPE html>
+<html>
+<body style="background-color:Yellow;">
+<h1>New Version Deploy Successfully ECS</h1>
+</body>
+</html>
