--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:Yellow;">
-<h1>New Version Deploy Successfully ECS</h1>
+<h1>New Version Deploy Successfully ECS:v1</h1>
 </body>
 </html>
